--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,13 @@
 <h1>投稿一覧</h1>
+
 <div class="center-text">
   <%= link_to "新しい投稿", new_post_path, class: "link-button" %></div>
 
 
 <ul>
   <% @posts.each do |post|%>
-  <li>
-    <p class="post-id-title">ID:<%= post.id %>/<%= post.title%></p>
+  <li class="post-container">
+    <p class="post-id-title">ID:<%= post.id %>/<%= post.title%>  　　投稿者： <%= post.user.name %></p>
     <p class="post-content"><%= post.content%></p>
     <span>
       <small class="post-date"><%= post.created_at %></small>
@@ -14,11 +15,15 @@
     <% if post.user_id == current_user.id %>
     <div class="edit-delete-container">
       <%= link_to "編集", edit_post_path(post), class: "link-edit-button" %>
-      <%= button_to "削除", post_path(post), method: :delete, class: "link-delete-button"%>
-      </div>
+      <%= button_to "削除", post_path(post, confirm: 'false'), method: :delete, class: "link-delete-button", data: { turbo: "false" } %>
+      <% if session[:updated_post_id] == post.id %>
+        <div class="flash-notice">
+          <%= flash[:notice] %>
+        </div>
+        <% session.delete(:updated_post_id) %>
+      <% end %>
+    </div>
     <% end %>
-
   </li>
 <% end %>
-
 </ul>
