--- a/app/views/posts/deleted.html.erb
+++ b/app/views/posts/deleted.html.erb
@@ -2,6 +2,6 @@
 
 <script>
   setTimeout(function(){
-    window.location.href = "<%= posts_path %>";
+    window.location.href = "<%= user_posts_path(current_user) %>";
   }, 3000);
 </script>
