--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>投稿編集</h1>
-<%= form_with model: @post, html: {class: "form-container"} do |form| %>
+<%= form_with model: @post, url: user_post_path(current_user, @post), html: {class: "form-container"} do |form| %>
   <div class="form-input">
     <%= form.label :title %><%= form.text_field :title %>
   </div>
