--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <h1>新しい投稿</h1>
-<%= form_with model: @post, html: {class: "form-container"} do |form| %>
+<%= form_with model: @post, url: user_posts_path(current_user), html: {class: "form-container"} do |form| %>
   <div class="form-input">
     <%= form.label :title %><%= form.text_field :title %>
   </div>
