--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @user) do |f| %>
+    <%= form_with(model: @user, url: signup_path) do |f| %>
       <%= f.label :name %>
       <%= f.text_field :name %>
 
