--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
 <ul>
   <% @posts.each do |post|%>
   <li class="post-container">
-    <p class="post-id-title">ID:<%= post.id %>/<%= post.title%>  　　投稿者： <%= post.user.name %></p>
+    <p class="post-id-title">ID:<%= post.id %>/<%= post.title%>  　　投稿者： <%= post.user.unique_id %></p>
     <p class="post-content"><%= post.content%></p>
     <span>
       <small class="post-date"><%= post.created_at %></small>
